--- a/style.css
+++ b/style.css
@@ -1,1 +1,29 @@
 @import url(reset.css);
+
+body {
+    font: 400 normal 1rem 'system-ui';
+    display: flex;
+    justify-content: center;
+    height: 100%;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 10px;
+    margin: 300px 0;
+    padding: 20px 75px;
+    border: none;
+    border-radius: 5%;
+    background-color: rgb(198, 207, 158);
+}
+
+#submit-btn {
+    margin-top: 10px;
+    border: none;
+    height: 25px;
+    background-color: rgb(102, 102, 228, .5);
+    border-radius: 5%;
+    cursor: pointer;
+}
